# Economics-RPG

./: .gitignore  ALLY_ESCORT_V0.27.md  ATTRIBUTION.md  CHANGELOG.md  CHECKSUMS.sha256  ECONOMY_V0.27.md  HANDOFF.md  LICENSE  PROJECT_STATE.json  PROMPT_1_UPLOAD_TO_GITHUB.md  PROMPT_2_RETRIEVE_AND_CONTINUE.md  README.md  RELEASE_NOTES_V0.27.md  V0.27_COMPLETE.md  VERSION.json  build.js  dev.html  index.html  manifest.webmanifest  package.json  pyproject.toml  run-lan.bat  run.bat  serve.js  setup-llm.bat  setup-llm.sh  start_game.bat  start_game.sh
artifacts/: BUILD_REPORT.txt  v0.27-ally-patch.js  v0.27-audio-patch.js  v0.27-bridge-patch.js  v0.27-character-playtest.json  v0.27-economy-patch.js  v0.27-outer-loader.js  v0.27-server-integration.json  v0.27-validation.json
docs/: DESIGN.md  DEVELOPMENT.md  HD2D_MIGRATION.md  LLM-SETUP.md  ROADMAP.md
egglands/: __init__.py
legacy/: the-egg-lands-v92-khajit-ground-fix.html
releases/: pre-v87-backup.html  the-egg-lands-v20-character-foundations.html  the-egg-lands-v21-physical-resources.html  the-egg-lands-v22-testing-god-mode.html  the-egg-lands-v23-hidden-fish-ecology.html  the-egg-lands-v24-living-construction.html  the-egg-lands-v25-pathfinding-three-minute-score.html  the-egg-lands-v26-living-agriculture.html  the-egg-lands-v27-pen-gate-animal-legs.html  the-egg-lands-v28-biomes-elevation.html  the-egg-lands-v29-terrain-infrastructure.html  the-egg-lands-v30-npc-continuity.html  the-egg-lands-v31-social-dynamics.html  the-egg-lands-v32-npc-conversation-intelligence.html  the-egg-lands-v34-hd2d-massive-update.html  (+1 more)
(+81 files in other folders)
